# macro-dynamics

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_etude.ipynb  2_gmm_regime_detection.ipynb  3_hmm_regime_dynamics.ipynb
regime_models/: hmm_model.pkl
reports/: data_quality.json  regime_profiles.csv
src/macrostate/: __init__.py  cli.py
src/macrostate/config/: __init__.py  settings.py
src/macrostate/features/: __init__.py  transformers.py
src/macrostate/pipelines/: __init__.py  preprocess.py
src/macrostate/utils/: __init__.py  logging.py  paths.py
tests/: test_no_leakage_zscore.py
