[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrostate"
version = "0.1.0"
description = "Macro regime detection preprocessing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "typer>=0.9",
    "rich>=13.0",
    "loguru>=0.7",
    "pydantic>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
notebooks = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "hmmlearn>=0.3",
    "scipy>=1.11",
]

[project.scripts]
macrostate = "macrostate.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

